infrastracture/dev/ec2.tf
resource "aws_instance" "app_server" {
  provider = aws.dev

  subnet_id = aws_subnet.app1.id

  ami = "ami-09e67e426f25ce0d7"
  instance_type = "t2.micro"
  key_name = aws_key_pair.app.key_name

  tags = {
    Name = "app-server"
  }
}
